31 ağustos gün sonu

--- a/ReactKodlamalarim/e-ticaret/public/index.html
+++ b/ReactKodlamalarim/e-ticaret/public/index.html
@@ -22,6 +22,8 @@
   <!-- Libraries Stylesheet -->
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
   <title>E-Ticaret | buradanAl</title>
 </head>
